requirements changed: fix compatible with window tf version

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,9 @@ numpy
 python-dotenv
 #train model req
 tflite-runtime
-keras>=2.15.0
-tensorflow>=2.15.0
-tf-models-official>=2.15.0
+tensorflow
 tqdm
-opencv-python>=4.5.2.52
+opencv-python
 imageio
 git+https://github.com/tensorflow/docs
 ipympl
